# pyhive

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  generate.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
core-api-client/: README.md  pyproject.toml
core-api-client/core_api_client/: __init__.py
core-api-client/core_api_client/api/assignments/: assignments_create.py  assignments_destroy.py  assignments_latest_create.py  assignments_latest_destroy.py  (+20 more)
core-api-client/core_api_client/models/: __init__.py  assignment.py  assignment_notification.py  assignment_option_hanich.py  assignment_option_hanich_request.py  assignment_request.py  assignment_response.py  assignment_response_content.py  assignment_response_content_request.py  assignment_response_request.py  assignment_response_type_enum.py  assignments_create_assignment_status_error_component.py  assignments_create_assignment_status_error_component_attr.py  assignments_create_description_error_component.py  assignments_create_description_error_component_attr.py  assignments_create_flagged_error_component.py  assignments_create_flagged_error_component_attr.py  assignments_create_manual_check_count_error_component.py  assignments_create_manual_check_count_error_component_attr.py  assignments_create_manual_check_count_error_component_code.py  assignments_create_non_field_errors_error_component.py  assignments_create_non_field_errors_error_component_attr.py  assignments_create_student_assignment_status_error_component.py  assignments_create_student_assignment_status_error_component_attr.py  assignments_create_student_assignment_status_error_component_code.py  assignments_create_submission_count_error_component.py  assignments_create_submission_count_error_component_attr.py  assignments_create_submission_count_error_component_code.py  assignments_create_timer_error_component.py  assignments_create_timer_error_component_attr.py  assignments_create_timer_error_component_code.py  assignments_create_total_check_count_error_component.py  assignments_create_total_check_count_error_component_attr.py  assignments_create_total_check_count_error_component_code.py  assignments_create_validation_error.py  assignments_latest_create_non_field_errors_error_component.py  assignments_latest_create_non_field_errors_error_component_attr.py  assignments_latest_create_non_field_errors_error_component_code.py  assignments_latest_create_validation_error.py  assignments_latest_list_exercise_parent_module_parent_subject_id_error_component.py  (+1786 more)
(+622 files in other folders)
